# pytest-mark-count

./: .gitignore  README.rst  mkdocs.yml  pyproject.toml  pytest_help.txt  requirements.txt  tox.ini
.github/workflows/: dev.yml  main.yml  publish-to-test-pypi.yml  test.yml
docs/: index.md
src/pytest_mark_count/: plugin.py
test_examples/: pyproject.toml  test_multi.py  test_single.py
tests/: test_mark_count.py
