#############################################
#	Dual License: BSD-3-Clause AND MPL-2.0	#
#	Copyright (c) 2024, Adam Nogowski		#
#############################################

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-mark-count"
description = "Get a count of the number of tests marked, unmarked, and unique tests if tests have multiple markers"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.8"
authors = [{ name = "Adam Nogowski", email = "anogowski@live.com" }]
maintainers = [{ name = "Adam Nogowski", email = "anogowski@live.com" }]
license = { file = "LICENSE" }
classifiers = [
	"Framework :: Pytest",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Testing",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = ["pytest>=8.0.0"]
[project.urls]
Repository = "https://github.com/anogowski/pytest-mark-count"
[project.entry-points.pytest11]
mark-count = "pytest_mark_count.plugin"
